<resources>
    <string name="app_name">FinCat</string>
    <string name="today">TODAY</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="currency_dollar">$</string>
    <string name="currency_ruble">₽</string>
    <string name="question_logout">Are you sure you want to do this?</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="dollar">Dollar</string>
    <string name="ruble">Ruble</string>
    <string name="network_error">Failed to connect to server</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <!--  Boarding -->
    <string name="boarding_subtitle">Start by creating an account\nin the FinCat app!</string>
    <string name="boarding_btn">Start</string>
    <!--  /Boarding -->

    <!--  Months -->
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_jule">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <!--  /Months -->

    <string name="report_title">Report</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>

    <!--  PinCode  -->
    <string name="pin_code_bio_title">Entrance to FinCat</string>
    <string name="pin_code_title">Enter a code</string>
    <string name="pin_code_set">Set code</string>
    <string name="pin_code_repeat">Repeat code</string>
    <string name="pin_code_next">Next</string>
    <string name="pin_code_success">Your question has been sent successfully!</string>
    <!--  /PinCode  -->

    <!--  User  -->
    <string name="user_title">User profile</string>
    <string name="user_first_name">First name</string>
    <string name="user_second_name">Second name</string>
    <string name="user_email">Email</string>
    <string name="user_create">Create user</string>
    <!--  /User  -->

    <!--  Search  -->
    <string name="search_title_hint">Search for notes, categories or labels</string>
    <string name="search_empty">Search or selected hints are empty!</string>
    <!--  /Search  -->

    <!--  Asked Quest  -->
    <string name="asked_quest_title">Ask your question about the application!</string>
    <string name="asked_quest_subtitle">The developer will contact you by email</string>
    <string name="asked_quest_hint_topic">Topic</string>
    <string name="asked_quest_hint_descr">Description</string>
    <string name="asked_quest_send">Send</string>
    <!--  /Asked Quest  -->

    <!--  Status  -->
    <string name="status_expenses">Expense</string>
    <string name="status_balance">Balance</string>
    <string name="status_income">Income</string>
    <!--  /Status  -->

    <!--  Home  -->
    <string name="home_add">Add new</string>
    <string name="home_item_wallet_empty">History is empty!</string>
    <!--  /Home  -->

    <!--  Report  -->
    <string name="report_statistics_title">Statistics</string>
    <string name="report_overview">Overview</string>
    <string name="report_details">Details</string>
    <string name="report_transactions">%s transactions</string>
    <string name="report_exit">To exit the application, press back again</string>
    <!--  /Report  -->

    <!--  Settings  -->
    <string name="settings_manage">Manage categories</string>
    <string name="settings_currency">Choose currency</string>
    <string name="settings_language">Choose language</string>
    <string name="settings_questions">Asked questions</string>
    <string name="settings_logout">Logout</string>
    <!--  /Settings  -->

    <!--  ManagerCategories  -->
    <string name="manager_categories_title">Manage categories</string>
    <string name="manager_categories_edit">Edit</string>
    <string name="manager_categories_empty">Categories is empty!</string>
    <string name="manager_categories_add_new">Add new category</string>
    <!--  /ManagerCategories  -->

    <!--  AddNewWallet  -->
    <string name="add_new_wallet_title_add_new">Add new</string>
    <string name="add_new_wallet_title_edit">Edit</string>
    <string name="add_new_wallet_type">Type</string>
    <string name="add_new_wallet_income">Income</string>
    <string name="add_new_wallet_expense">Expense</string>
    <string name="add_new_wallet_category_name">Category name</string>

    <string-array name="TypesWallet">
        <item>Income</item>
        <item>Expense</item>
    </string-array>

    <string name="add_new_wallet_amount_hint">Amount</string>
    <string name="add_new_wallet_description_hint">Description (Optional)</string>
    <string name="add_new_wallet_btn_income">Add an income</string>
    <string name="add_new_wallet_btn_edit_income">Edit an income</string>
    <string name="add_new_wallet_btn_expense">Add an expense</string>
    <string name="add_new_wallet_btn_edit_expense">Edit an expense</string>
    <!--  /AddNewWallet  -->

    <!--  Income  -->
    <string name="income_grocery">Grocery</string>
    <string name="income_gifts">Gifts</string>
    <string name="income_wages">Wages</string>
    <string name="income_interest">Interest</string>
    <string name="income_savings">Savings</string>
    <string name="income_allowance">Allowance</string>
    <string name="income_title">CHOOSE CATEGORY</string>
    <!--  /Income  -->

    <!--  Expense  -->
    <string name="expense_empty">Empty, add a category!</string>
    <string name="expense_add_new_category">Add new category</string>
    <!--  /Expense  -->

    <!--  AddNewCategory  -->
    <string name="creater_category_title_add">Add new category</string>
    <string name="creater_category_title_edit">Edit category</string>
    <string name="creater_category_hint">Category name</string>
    <string name="creater_category_name">This name already exists, please select a new one!</string>
    <string name="create_amount_mask">-%s</string>
    <!--  /AddNewCategory  -->

    <!--  Icons  -->
    <string name="icons_title">CHOOSE CATEGORY ICON</string>
    <!--  /Icons  -->

    <!--  MonthPicker  -->
    <string name="month_picker_title">PICK A MONTH</string>
    <!--  /MonthPicker  -->

    <!--  Language  -->
    <string name="language_title">Choose language</string>
    <string name="language_save">Save</string>
    <!--  /Language  -->

    <!--  Currency  -->
    <string name="currency_title">Choose currency</string>
    <string name="currency_save">Save</string>
    <!--  /Currency  -->
</resources>