<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/dialog_asked_quest_root_pad_ver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTitleAskedQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dialog_title_asked_quest_pad_hor"
            android:text="@string/asked_quest_title"
            android:textAlignment="center"
            android:textAppearance="@style/Body2Style"
            android:textColor="@color/grey_900" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtSubtitleAskedQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_subtitle_asked_quest_margin_top"
            android:text="@string/asked_quest_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/CaptionStyle"
            android:textColor="@color/grey_500" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTopicAskedQuest"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dialog_til_topic_asked_quest_mar_hor"
            android:layout_marginTop="@dimen/dialog_til_topic_asked_quest_mar_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTopicAskedQuest"
                style="@style/TextEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/asked_quest_hint_topic"
                android:imeOptions="actionGo"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescriptionAskedQuest"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dialog_til_descr_asked_quest_mar_hor"
            android:layout_marginTop="@dimen/dialog_til_descr_asked_quest_mar_top">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDescriptionAskedQuest"
                style="@style/TextEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/asked_quest_hint_descr"
                android:inputType="textMultiLine"
                android:minLines="3"
                tools:text="sddssdsdsdsdsd" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.android.pokhodai.expensemanagement.utils.view.button.NetworkButtonView
            android:id="@+id/btnAskedQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dialog_btn_asked_quest_mar_hor"
            android:layout_marginTop="@dimen/dialog_btn_asked_quest_mar_top"
            android:enabled="false"
            android:text="@string/asked_quest_send" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>